--- a/README
+++ b/README
@@ -3,3 +3,6 @@ For more information on the xPL protocol, see:
 http://xplproject.org.uk/
 
 This project is done in Eclipse, so it should work as an Eclipse project.
+
+For more information on the project, take a look at http://smg.tophi.net/
+
