--- a/README
+++ b/README
@@ -4,5 +4,5 @@ http://xplproject.org.uk/
 
 This project is done in Eclipse, so it should work as an Eclipse project.
 
-For more information on the project, take a look at http://smg.tophi.net/
+For more information on the project, take a look at http://smg.tophi.net/content/xpl-widget-android
 
